# CI

./: .gitignore  Pipfile  README.md  TUTORIAL.md  config.py  experiment_runner.py  final_standard_experiment.py  main.py  pyproject.toml  simple_example.py  simple_web_visualizer.py  table_renderer.py  test_quick_experiment.py  test_standard_experiment.py  web_visualizer.py
algorithms/: genetic_algorithm.py  pso.py
benchmarks/: functions.py
experiments/: run_experiments.py
experiments/results/: ackley_ga.json  ackley_pso.json  ackleyn2_ga.json  ackleyn2_pso.json  ackleyn3_ga.json  ackleyn3_pso.json  ackleyn4_ga.json  ackleyn4_pso.json  adjiman_ga.json  adjiman_pso.json  alpinen1_ga.json  alpinen1_pso.json  alpinen2_ga.json  alpinen2_pso.json  amgm_ga.json  amgm_pso.json
genetic_algorithm_optimization/: __init__.py
genetic_algorithm_optimization/benchmarks/: __init__.py  functions.py  manual_functions.py
genetic_algorithm_optimization/core/: __init__.py  chromosome.py  crossovers.py  mutations.py  replacement.py  selection.py
genetic_algorithm_optimization/experiments/: __init__.py  parallel_experiments.py  sequential_experiments.py
genetic_algorithm_optimization/parallel/: __init__.py  algorithms.py
genetic_algorithm_optimization/sequential/: __init__.py  algorithms.py
genetic_algorithm_optimization/utils/: __init__.py  results_manager.py  visualize_results.py
results/data/: detailed_results_20250913_053407.json  detailed_results_20250913_054143.json  detailed_results_20250913_055659.json  detailed_results_20250913_061756.json
results/tables/: multimodal_comparison.txt  multimodal_function_info.txt  multimodal_results_20250913_053407.csv  multimodal_results_20250913_054143.csv  multimodal_results_20250913_055659.csv  multimodal_results_20250913_061756.csv  multimodal_results_20250913_074907.csv  unimodal_comparison.txt  unimodal_function_info.txt  unimodal_results_20250913_053407.csv  unimodal_results_20250913_054143.csv  unimodal_results_20250913_055659.csv  unimodal_results_20250913_061756.csv  unimodal_results_20250913_074907.csv
results/web/: dashboard.html  multimodal_comparison.html  multimodal_function_info.html  unimodal_comparison.html  unimodal_function_info.html
